--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -657,3 +657,5 @@
 .hint--no-shadow:before, .hint--no-shadow:after {
   text-shadow: initial;
   box-shadow: initial; }
+
+.toFixed thead th { position: sticky; top: 0; box-shadow: inset 0 1px 0 transparent, inset 0 -3px 0 #485261; }
