--- a/assets/build.css
+++ b/assets/build.css
@@ -246,5 +246,5 @@
  *
  */
 
-.toFixed thead th { position: sticky; top: 0; box-shadow: inset 0 1px 0 transparent, inset 0 -3px 0 #485261; }
+.toFixed thead th { position: sticky; top: 0; box-shadow: inset 0 1px 0 transparent, inset 0 -3px 0 #485261; z-index: 100; }
 
